<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TabHostDemo</string>
    <string name="action_settings">Settings</string>
    <string name="tab1">姓名学号</string>
    <string name="tab2">预约课程</string>
	<string name="tab3">最近答疑</string>
	<string name="tab4">近期答疑</string>   
	<string name="text1">南京航空航天大学</string>
    <string name="num1">南京航空航天大学</string>
    <string name="tishi1">学号/工号</string>
    <string name="text2">答疑系统</string> 
    <string name="tishi2">输入密码</string>
    <string name="text3">请选择登录方式</string>
    <string name="man">用户登录</string>
	<string name="student">学生</string>
	<string name="teacher">老师</string>
	<string name="denglu">登录</string>
	<string name="zhuce">注册</string>

</resources>
